<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PlayListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivArtworkUrl"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/ic_library_music_black_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp">

                        <TextView
                            android:id="@+id/tvTrackCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trackcount"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/sound"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />



                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvCollectionName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/collectionname"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvArtistName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artistname"
                        android:textColor="@color/pink"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text=" - "
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPrimaryGenreName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ROCK"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text=" - "
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2005"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCollectionPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9.00"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tvCurrency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:text="USD"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"></View>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PLAY"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:visibility="gone"></View>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTrack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsvBtnSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:clipToPadding="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/ivArtworkUrlsmoll"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_library_music_black_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTrackNamesmoll"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="In Between Dreams (Bonus Track Version)"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvArtistNamesmoll"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/artnamesmoll"
                        android:textColor="#bfbfbf"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <at.markushi.ui.CircleButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_fast_rewind_black_24dp"
                        app:cb_color="@color/white"
                        app:cb_pressedRingWidth="8dip" />

                    <at.markushi.ui.CircleButton
                        android:layout_width="64dip"
                        android:layout_height="64dip"
                        android:src="@drawable/ic_play_arrow_black_24dp"
                        app:cb_color="@color/white"
                        app:cb_pressedRingWidth="10dip" />

                    <at.markushi.ui.CircleButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_fast_forward_black_24dp"
                        app:cb_color="@color/white"
                        app:cb_pressedRingWidth="8dip" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
